--- a/css/calendar.css
+++ b/css/calendar.css
@@ -63,7 +63,7 @@
     background: rgba(255, 255, 255, 0.1);
 }
 
-.calendar tbody tr td.day {}
+/*.calendar tbody tr td.day {}*/
 
 .calendar tbody tr td.day div:first-child {
     padding: 4px;
