Added function to the caledar to show booked dates as red

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -106,7 +106,7 @@
 
 .booked {
     background-color: #C23B22;
-    color: aqua;
+    color: white !important;
 }
 
 @media screen and (max-width:768px) {
