--- a/app/app.css
+++ b/app/app.css
@@ -78,7 +78,7 @@ header nav li a {
 /*Hero image styling*/
 h1 {
     font-weight: 700;
-    font-size: 4rem;
+    font-size: 5rem;
     margin: 0;
 }
 
@@ -86,14 +86,13 @@ h1 {
     color: white;
     position: absolute;
     padding: 3rem;
-    gap: 2rem;
-
     
 }
 
 .hero-subtitle {
     font-size: 1.5rem;
     font-weight: 500;
+    margin-top: 3rem;
 
 }
 
@@ -106,7 +105,7 @@ h1 {
     width: 100%;
 }
 
-.hero-image, .room-image, .overlay{
+.hero-image, .room-image, .overlay, .about-image{
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -118,6 +117,26 @@ h1 {
     margin-top: 2rem;
     background-color: var(--card-background);
     border-radius: var(--rounded-corners);
+}
+
+.about-section {
+    display: flex;
+    gap: 5rem;
+}
+
+.about-wrapper{
+    width: 60%;
+    font-size: 1rem;
+}
+
+.about-img-container{
+    width: 40%;
+}
+
+.v-line-black{
+    border: 1px solid black;
+    height: 15rem;
+    margin: 0;
 }
 
 .offer-section{
@@ -141,14 +160,18 @@ h1 {
     color: var(--feverish-pink);
 }
 
+.room-card {
+    display: flex;
+    justify-content: space-between;
+    height: 30rem;
+
+}
+
 .room-card, .booking-section {
     margin-top: 2rem;
-    height: 30rem;
     padding: 2rem;
     max-width: 2000px;
     border-radius: var(--rounded-corners);
-    display: flex;
-    justify-content: space-between;
     background-color: var(--card-background);
 }
 
@@ -160,7 +183,7 @@ h1 {
     width: 40%;
 }
 
-.room-image{
+.room-image, .about-image{
     border-radius: var(--rounded-corners);
 }
 
@@ -182,18 +205,24 @@ button:hover{
 
 /*Booking section*/
 .booking-section{
-height: 35rem;
+height: 40rem;
 gap: 2rem
+}
+
+.booking-wrapper{
+    display: flex;
+    gap: 2rem;    
 }
 
 form{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 50%;
 }
 
 #calendar-container{
-    width: 55rem;
+    width: 40rem;
 }
 
 .date-wrapper {
