--- a/app/app.css
+++ b/app/app.css
@@ -36,6 +36,13 @@ header {
     padding: 1rem 2rem 1rem 2rem;
 }
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    position: relative;
+}
+
 h2 {
     font-size: 2rem;
 }
@@ -73,7 +80,25 @@ header nav li a {
 
 }
 
+/*Login sttyling*/
+.hidden{
+    display: none;
+}
 
+#admin-login{
+    cursor: pointer;
+}
+
+#admin-login-form{
+    position: absolute;
+    z-index: 10;
+    width: 20rem;
+    padding: 2rem;
+    border-radius: 0 0.5rem 0.5rem 0;
+    top: 8rem;
+    right: 0;
+    background-color: var(--regatta);
+}
 
 /*Hero image styling*/
 h1 {
