Changed how features are displayed for better ux

--- a/app/app.css
+++ b/app/app.css
@@ -6,6 +6,7 @@
     --lime-ricky: #A9C16B;
     --vivacious-pink: #E186A7;
     --rounded-corners: 0.5rem;
+    --drop-shadow: 
 }
 
 *{
@@ -26,78 +27,6 @@ main {
 
 b{
     font-weight: bold;
-}
-
-
-/*Header stydling*/
-header {
-    background-color: var(--regatta);
-    display: flex;
-    padding: 1rem 2rem 1rem 2rem;
-}
-
-nav {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    position: relative;
-}
-
-h2 {
-    font-size: 2rem;
-}
-
-.v-line{
-    border: 1px solid white;
-    height: 100px;
-    margin-left: 1rem;
-}
-
-.navbar, .header-name{
-    color: white;
-    margin: 0;
-    list-style: none;
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    gap: 2rem
-}
-
-.navbar li{
-    font-size: 1.5rem;
-    padding: 1rem;
-
-}
-
-.navbar li:hover{
-    background-color: var(--feverish-pink);
-    border-radius: var(--rounded-corners);
-}
-
-header nav li a {
-    text-decoration: none;
-    color: white;
-
-}
-
-/*Login sttyling*/
-.hidden{
-    display: none;
-}
-
-#admin-login{
-    cursor: pointer;
-}
-
-#admin-login-form{
-    position: absolute;
-    z-index: 10;
-    width: 20rem;
-    padding: 2rem;
-    border-radius: 0 0.5rem 0.5rem 0;
-    top: 8rem;
-    right: 0;
-    background-color: var(--regatta);
 }
 
 /*Hero image styling*/
@@ -218,6 +147,8 @@ button {
     border: 0px;
     border-radius: var(--rounded-corners);
     padding: 0.5rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
     color: white;
 }
 
@@ -230,7 +161,6 @@ button:hover{
 
 /*Booking section*/
 .booking-section{
-height: 40rem;
 gap: 2rem
 }
 
